fix: issue where file browser portion of workspaces ui would grow if the path was too long

--- a/src/app/workspace/workspace-view/workspace-view.component.scss
+++ b/src/app/workspace/workspace-view/workspace-view.component.scss
@@ -47,4 +47,8 @@ app-workspace-identifier {
   .border-right {
     border-right: 1px solid $gray;
   }
+
+  .third {
+    flex-basis: 33%;
+  }
 }
